# graphql_pg

./: .gitignore  codegen.ts  index.ts  package.json  query.graphql  schema.graphql  tsconfig.json
cli/: .gitignore  Cargo.toml  build.rs
cli/src/: generated.rs  main.rs
config/: config.json
migrations/: 20230708214112-schema.cjs
seeders/: 20230708235715-initial.cjs
src/: plugin.ts
