[package]
name = "gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
apollo-parser = "0.5.3"
clap = { version = "4.3.11", features = ["derive", "unstable-v5", "unstable-doc"] }
clap-stdin = "0.2.0"
graphql_client = "0.13.0"
heck = "0.4.1"
paste = "1.0.13"
prettyplease = "0.2.10"
proc-macro2 = "1.0.64"
quote = "1.0.29"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.169"
serde_json = "1.0.100"
syn = "2.0.24"

[build-dependencies]
apollo-parser = "0.5.3"
graphql_client = "0.13.0"
paste = "1.0.13"
prettyplease = "0.2.10"
proc-macro2 = "1.0.64"
quote = "1.0.29"
syn = "2.0.24"
heck = "0.4.1"
anyhow = "1.0.71"
